feat: 平台页账号列表来源与头像显示, 迁移 appcore/acccore 源码并纳入文档